--- a/index.html
+++ b/index.html
@@ -12,16 +12,15 @@
     <meta property="og:url" content="https://regalo-navidad-flor.vercel.app/" />
     <meta property="og:title" content="Feliz Navidad 🎄" />
     <meta property="og:description" content="Un regalo especial de Navidad con todo mi amor 🎁" />
-    <meta property="og:image" content="https://regalo-navidad-flor.vercel.app/images/fondo-02.jpg" />
-    <meta property="og:image:width" content="1200" />
-    <meta property="og:image:height" content="630" />
+    <meta property="og:image" content="https://regalo-navidad-flor.vercel.app/images/fondo-mobile.jpg" />
+    <meta property="og:image:alt" content="Feliz Navidad" />
     
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:url" content="https://regalo-navidad-flor.vercel.app/" />
     <meta name="twitter:title" content="Feliz Navidad 🎄" />
     <meta name="twitter:description" content="Un regalo especial de Navidad con todo mi amor 🎁" />
-    <meta name="twitter:image" content="https://regalo-navidad-flor.vercel.app/images/fondo-02.jpg" />
+    <meta name="twitter:image" content="https://regalo-navidad-flor.vercel.app/images/fondo-mobile.jpg" />
     
     <!-- Theme Color -->
     <meta name="theme-color" content="#304F30" />
